libctl 3.1 (6/5/2009)

  * Support specifying the location of the guile and guile-config
    programs with GUILE and GUILE_CONFIG environment variables in
    the configure script.

  * Support for calling NLopt optimization library (also requires
    the program using libctl to be changed to link nlopt).

  * New ellipsoid_overlap_with_object function, analogous to
    box_overlap_with_object function.

  * Bug fix in "include" function for recent versions of Guile,
    to properly keep track of the current include directory.

  * Bug fix in numerical-derivative routine, which didn't converge
    when the error was exactly zero.

libctl 3.0.3 (2/27/2008)

  * Added "begin-timed" function, which is similar to "begin-time" except
    that it returns the value of the last statement (like "begin") rather
    than the time.

  * Bug fix: allow classes to have boolean properties.

  * Bug fixes for compilation under C++, thanks to David Foster:
    include missing string.h header and fixed gh_new_procedure prototype.

libctl 3.0.2 (8/22/2006)

  * Fix minor Guile incompatibility on some systems.

libctl 3.0.1 (5/1/2006)

  * Change shared-library version to 3:0:0 instead of 0:0:0.  This
    avoids conflicts with shared library version numbers that has
    been assigned to earlier versions of libctl for Debian; thanks to
    Josselin Mouette for the suggestion.

libctl 3.0 (4/1/2006)

  * Switch to use automake and libtool.  Can now install shared libraries
    with --enable-shared.

  * License is now GNU GPL (v2 or later) rather than the GNU LGPL, due
    to use of third-party GPL code for multi-dimensional integration (below).

  * gen-ctl-io now supports separate generation of code and header files
    via --code and --header arguments.  (Better for parallel make.)
    Also support a -o option to give a different output file name.

  * gen-ctl-io can now export C++ code by using the --cxx flag.
